--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,10 @@ userName = User Name
 
 #Form strings
 form.hasErrors = Please Correct values in the error below:
+imageUrl= Image URL
+description=Description
+price=Price
+
 
 
 # Validation Messages
@@ -17,3 +21,14 @@ NotEmpty.customerForm.userName = {0} is Required.
 Size.customerForm.userName = {0} must be between {2} and {1} characters long.
 NotEmpty.customerForm.email = Email cannot be Blank.
 NotEmpty = Field cannot be blank.
+
+NotEmpty.productForm.description={0} cannot be blank.
+Size.productForm.description= {0} must be more than {2} characters long, up to {1} characters long.
+
+Min.productForm.price= {0} must be over {1}.
+Max.productForm.price= {0} must be under {1}.
+
+NotEmpty.productForm.imageUrl= {0} cannot be blank.
+URL.productForm.imageUrl= {0} must be a valid URL.
+
+PasswordsDontMatch=Password values must match
